# aeonroute

./: .env.example  .gitignore  CONTRIBUTING.md  FRONTEND_README.md  INSTALLATION.md  LEARNING_BOOK.md  LICENSE  Makefile  PROJECT_DESCRIPTION.md  README.md  UI_GUIDE.md  UI_IMPLEMENTATION_SUMMARY.md  backend_api.py  benchmark.py  conftest.py  docker-compose.ui.yml  docker-compose.yml  generate_report_assets.py  package-lock.json  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements-lock.txt  requirements.txt  setup.sh  test_output.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
.gsd/: ARCHITECTURE.md  BASELINES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  SPEC.md  STACK.md  STATE.md
.gsd/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.gsd/phases/: VERIFICATION.md
.gsd/phases/01-foundation-stability/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-RESEARCH.md
.gsd/phases/02-backend-restructure/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-RESEARCH.md
.gsd/phases/03-design-system-ui-polish/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-RESEARCH.md
.gsd/phases/04-map-route-visualization/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-RESEARCH.md
.gsd/phases/05-live-data-training/: 05-01-PLAN.md  05-01-SUMMARY.md  05-02-PLAN.md  05-02-SUMMARY.md  05-03-PLAN.md  05-03-SUMMARY.md  05-RESEARCH.md
.gsd/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
backend/: Dockerfile
backend/app/: config.py  dependencies.py  main.py  middleware.py  state.py
data/hyderabad/: charging_stations.json
docker/: .dockerignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  stats.html  tailwind.config.ts  tsc_errors.txt  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts  vitest.config.ts
frontend/e2e/: app.spec.ts  navigation.spec.ts  visual-regression.spec.ts
frontend/src/: App.tsx  index.css  test-setup.ts
models/gnn_gan/: gnn_discriminator.weights.h5
models/q_learning/: q_table_hyderabad.pkl  trained_agent.pkl
models/sg_gan/: traffic_gan_discriminator.h5  traffic_gan_discriminator.keras  traffic_gan_generator.h5
results/metrics/: evaluation_results.json
scripts/: check_model_compatibility.py
src/: config.py  environment.py  evaluate.py  gnn_route_generator.py  hyderabad_environment.py  main.py  q_learning_agent.py  road_graph.py  route_generator.py  test_environment.py  test_road_graph.py  test_route_generator.py  test_traffic_generation.py  traffic_generator.py
tests/: test_api.py  test_model_loading.py
(+230 files in other folders)
